# prefixTreeESpan

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: GrowElem.h  PreTree.h  ProjDB.h  ProjInst.h  Tree.h  TreeNode.h
src/: GrowElem.cpp  PreTree.cpp  ProjDB.cpp  ProjInst.cpp  Tree.cpp  TreeNode.cpp
